# server-included-arcade-game

./: CMakeLists.txt  README.md  conanfile.txt  mainApp.cpp
Application/: #Client.hpp#  .#Client.hpp  Application.cpp  Application.hpp  Client.hpp  Clock.hpp  DynamicLoader.hpp  EngineException.hpp  Layer.cpp  Layer.hpp  LayerType.hpp  Scene.cpp  Scene.hpp  Server.hpp  ThreadPool.hpp  _Engine.hpp
Application/EntityComponentSystem/: Component.hpp  ComponentFactory.cpp  ComponentFactory.hpp  ComponentHolder.cpp  ComponentHolder.hpp  Entities.cpp  Entities.hpp  EntitiesFactory.cpp  EntitiesFactory.hpp  EventManager.cpp  EventManager.hpp  IEvent.hpp  SystemBase.cpp  SystemBase.hpp  SystemFactory.cpp  SystemFactory.hpp
Application/EntityComponentSystem/DerivateComponent/: AudioComponent.hpp  BonusComponent.hpp  DirectionComponent.hpp  DrawableComponent.hpp  DrawableObjectComponent.hpp  FontComponent.hpp  FriendEntityComponent.hpp  HeartPointComponent.hpp  HitboxComponent.hpp  InputComponent.hpp  PlayableComponent.hpp  PositionComponent.hpp  PowerDamageComponent.hpp  ShootRateComponent.hpp  SpriteComponent.hpp  TeamComponent.hpp  TextComponent.hpp  TextureComponent.hpp  VelocityComponent.hpp
Application/EntityComponentSystem/DerivateSystem/: BonusSystem.cpp  BonusSystem.hpp  ColideSystem.cpp  ColideSystem.hpp  DamageSystem.cpp  DamageSystem.hpp  EndGameSystem.cpp  EndGameSystem.hpp  GraphicPositionSystem.cpp  GraphicPositionSystem.hpp  PopMissileSystem.cpp  PopMissileSystem.hpp  ReceiveSystem.cpp  ReceiveSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  RendererSystemPosition.hpp  RendererSytemPosition.cpp  SendSystem.cpp  SendSystem.hpp  attributeInputSystem.cpp  attributeInputSystem.hpp  changeSpeedSystem.cpp  changeSpeedSystem.hpp  deathSystem.cpp  deathSystem.hpp  moveSystem.cpp  moveSystem.hpp
Application/Network/: AUdp.hpp  Fork.cpp  Fork.cpp~  Fork.hpp  NewUdpClient.hpp  NewUdpServer.hpp  Room.hpp  TcpClient.hpp  TcpServer.hpp  UdpClient.hpp  UdpServer.hpp  connection.hpp  stock.hpp  udp_struct.hpp
Application/Network/Room/: Room.cpp
Application/Network/tcp_client/: main.cpp  tcp_client.cpp
Application/Network/tcp_server/: tcp_server.cpp
Application/Network/udp_client/: NewUdpClient.cpp  main.cpp  new_main.cpp  udp_client.cpp
Application/Network/udp_server/: NewUdpServer.cpp  main.cpp  new_main.cpp  udp_server.cpp
RendererEngine/: Drawable.hpp  Renderer.hpp
RendererEngine/SFML/: DrawableObject.hpp  Font.cpp  Font.hpp  ISound.hpp  NoDrawableObject.hpp  Sfml.hpp  SfmlRenderer.cpp  SfmlRenderer.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp
ScriptEngine/: ModifyValueScript.cpp  Script.cpp  Script.hpp  ScriptName.hpp  enemies.cpp
ScriptFile/: defaultEntityBck.json  defaultEntityGame.json  defaultEntityUIhealth.json  defaultEntityUIshield.json
ScriptFile/Scene0/: EnemiesEntity.json  EntityTest.json  EventScript.json  EventScript1.json  missile1Entity.json
ScriptFile/Scene1/: EventScript2.json  StageEntity.json
main/: main_client.cpp  main_server.cpp
